fixed sidebar, and vertically aligned elements properly

--- a/Website/static/CSS/base.css
+++ b/Website/static/CSS/base.css
@@ -1,7 +1,7 @@
 
 .sidebar {
   height: 100%;
-  width: 5%;
+  width: 4%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -25,7 +25,7 @@
   color: #f1f1f1;
 }
 
-main .sidebar {
+#main .sidebar {
   position: absolute;
   top: 0;
   right: 25px;
@@ -54,8 +54,11 @@ body {
 }
 
 .sidebar_contents{
-    position:absolute;
-    top:25%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 
 }
 
