--- a/Website/static/CSS/home.css
+++ b/Website/static/CSS/home.css
@@ -7,7 +7,10 @@ margin: 0;
 .home_text {
 font-size:3rem;
 padding-left: 1em;
-position:absolute;
-top:33%;
+margin: 0;
+position: absolute;
+top: 50%;
+-ms-transform: translateY(-50%);
+transform: translateY(-50%);
 
 }
